--- a/src/components/bottom_bar/_bottom_bar.scss
+++ b/src/components/bottom_bar/_bottom_bar.scss
@@ -1,4 +1,5 @@
 .euiBottomBar {
+  @include euiBottomShadowFlat($euiShadowColorLarge);
   background: tintOrShade($euiColorFullShade, 25%, 90%);
   color: $euiColorEmptyShade;
   position: fixed;
